# Triad

./: .gitignore  :wq  Cargo.toml  LICENSE  README.md  build.rs  remove-json-comments.py  rust-toolchain.toml  triad-llvm-target.jsonc
.antigravitycli/: d2e6d5dd-753e-4816-ace8-bb714196b090.json
.cargo/: config.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  code.yml  test.yml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/interrupts/: dtp.rs  gdt.rs  idt.rs  mod.rs  pic.rs  privilege.rs  tss.rs  utils.rs
kernel/src/memory/: frame.rs  mod.rs  paddr.rs  page.rs  page_table.rs  paging.rs  translate.rs  vaddr.rs  virtual_address.rs
kernel/src/print/: framebuffer.rs  log.rs  mod.rs  serial.rs  writer.rs
kernel/src/registers/: control.rs  mod.rs  segment.rs
kernel/tests/: test-address-translation.rs  test-boot.rs  test-divide-by-zero-error.rs  test-pic-interrupts.rs  test-should-page-fault.rs  test-should-panic.rs  test-stack-overflow.rs  test-virtual-address-panic.rs
src/: lib.rs  main.rs  print.rs  privilege.rs  serial.rs  vga.rs
src/interrupts/: gdt.rs  idt.rs  instructions.rs  interrupt_handlers.rs  mod.rs  pic.rs  privilege.rs  segment.rs  tss.rs
src/print/: serial.rs  vga.rs
tests/: test-boot.rs  test-should-panic.rs  test-stack-overflow.rs
