[package]
name = "triad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
bit_field = "0.10.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Do not support building the binary in bench mode. This require underlying kernel support.
[[bin]]
name = "triad"
test = true
bench = false

# This allows QEMU to exit when running tests.
[package.metadata.bootimage]
test-args = [
    "-enable-kvm",
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300              # (in seconds)

[[test]]
# We don't need a harness functions for single test case test suites as the test runner is not
# required. We can directly call the test assertions from the entry point function.
name = "test-should-panic"
harness = false
