[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# This allows QEMU to exit when running tests.
[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33  # (0x10 << 1) | 1
test-timeout = 300  # (in seconds)

# Do not support building the binary in bench mode. This require underlying kernel support.
[[bin]]
bench = false
name = "kernel"
test = true

[[test]]
harness = false
# We don't need a harness functions for single test case test suites as the test runner is not
# required. We can directly call the test assertions from the entry point function.
name = "test-should-panic"

[[test]]
harness = false
name = "test-stack-overflow"

[dependencies]
bit_field = "0.10.1"
bitflags = "2.10.0"
bootloader_api = "0.11.2"
pc-keyboard = "0.7.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
